<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/forget"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/foto"
    tools:context=".ForgotPassword">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh1"
        android:layout_width="344dp"
        android:layout_height="400dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="400dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:cardBackgroundColor="@color/cardBackground"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="333dp"
            android:layout_height="375dp">

        <TextView
                android:id="@+id/tvForgotPasswordTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/forgot_password"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="33dp"
                android:layout_height="44dp"
                android:contentDescription="@string/logo"
                android:src="@drawable/mail"
                app:layout_constraintBottom_toBottomOf="@id/etEmailForgot"
                app:layout_constraintEnd_toStartOf="@+id/etEmailForgot"
                app:layout_constraintTop_toTopOf="@id/etEmailForgot"/>

            <EditText
                android:id="@+id/etEmailForgot"
                android:layout_width="265dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="#000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvForgotPasswordTitle" />
            <Button
                android:id="@+id/btnResetPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/reset_password"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/tvForgotPasswordTitle"
                app:layout_constraintStart_toStartOf="@+id/tvForgotPasswordTitle"
                app:layout_constraintTop_toBottomOf="@id/etEmailForgot" />
            <Button
                android:id="@+id/btnBackToLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/back_to_login"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/tvForgotPasswordTitle"
                app:layout_constraintStart_toStartOf="@+id/tvForgotPasswordTitle"
                app:layout_constraintTop_toBottomOf="@+id/btnResetPassword" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
