<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/foto"
    tools:context=".Register">

    <!-- swipe atau reload apk -->
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="344dp"
        android:layout_height="500dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- CardView -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="500dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:cardBackgroundColor="@color/cardBackground"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="333dp"
                android:layout_height="500dp">

                <!-- Ini adalah komentar untuk text register untuk email -->
                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/regist"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.497"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <!-- Tampilan untuk Text nama-->
                <ImageView
                    android:id="@+id/imgNama"
                    android:layout_width="33dp"
                    android:layout_height="44dp"
                    android:contentDescription="@string/logo"
                    android:src="@drawable/profile"
                    app:layout_constraintBottom_toBottomOf="@+id/etNama"
                    app:layout_constraintEnd_toStartOf="@+id/etNama"
                    app:layout_constraintTop_toTopOf="@+id/etNama" />

                <EditText
                    android:id="@+id/etNama"
                    android:layout_width="265dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp"
                    android:hint="@string/nama"
                    android:inputType="text"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView" />

                <!-- Tampilan untuk Text Email Registration-->
                <ImageView
                    android:id="@+id/imgEmail"
                    android:layout_width="33dp"
                    android:layout_height="44dp"
                    android:contentDescription="@string/logo"
                    android:src="@drawable/mail"
                    app:layout_constraintBottom_toBottomOf="@+id/etEmailReg"
                    app:layout_constraintEnd_toStartOf="@+id/etEmailReg"
                    app:layout_constraintTop_toTopOf="@+id/etEmailReg" />

                <EditText
                    android:id="@+id/etEmailReg"
                    android:layout_width="265dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="8dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="@+id/etNama"
                    app:layout_constraintStart_toStartOf="@+id/etNama"
                    app:layout_constraintTop_toBottomOf="@id/etNama" />

                <!-- Tampilan untuk Text Password-->
                <ImageView
                    android:id="@+id/imgPassword"
                    android:layout_width="33dp"
                    android:layout_height="44dp"
                    android:contentDescription="@string/logo"
                    android:src="@drawable/password"
                    app:layout_constraintBottom_toBottomOf="@+id/etPasswordReg"
                    app:layout_constraintEnd_toStartOf="@+id/etPasswordReg"
                    app:layout_constraintTop_toTopOf="@+id/etPasswordReg" />

                <EditText
                    android:id="@+id/etPasswordReg"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="@id/etEmailReg"
                    app:layout_constraintStart_toStartOf="@id/etEmailReg"
                    app:layout_constraintTop_toBottomOf="@id/etEmailReg" />

                <!-- Tampilan untuk Text Confirm password-->
                <ImageView
                    android:id="@+id/imgConfirmPassword"
                    android:layout_width="33dp"
                    android:layout_height="44dp"
                    android:contentDescription="@string/logo"
                    android:src="@drawable/confirm_password"
                    app:layout_constraintBottom_toBottomOf="@+id/etconfirmPassword"
                    app:layout_constraintEnd_toStartOf="@+id/etconfirmPassword"
                    app:layout_constraintTop_toTopOf="@+id/etconfirmPassword" />

                <EditText
                    android:id="@+id/etconfirmPassword"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="@id/etPasswordReg"
                    app:layout_constraintStart_toStartOf="@id/etPasswordReg"
                    app:layout_constraintTop_toBottomOf="@id/etPasswordReg" />

                <!-- Tampilan untuk Text button simpan-->
                <Button
                    android:id="@+id/bSimpan"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/simpan"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/etconfirmPassword"
                    app:layout_constraintStart_toStartOf="@+id/etconfirmPassword"
                    app:layout_constraintTop_toBottomOf="@id/etconfirmPassword" />

                <!-- Tampilan untuk Text button login-->
                <Button
                    android:id="@+id/bLogin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/sudah_punya_akun"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/bSimpan"
                    app:layout_constraintStart_toStartOf="@+id/bSimpan"
                    app:layout_constraintTop_toBottomOf="@id/bSimpan" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
